fast/dom/HTMLAnchorElement/anchor-ismap-crash.html doesn't completely work

Fixed console error "Uncaught SyntaxError: Unexpected token ?"

Bug: 668583
Change-Id: I4a673459ea028fa188799c841d938b3b5a11ecda